OR-26 : CGet used for myaudi request too, remove cgetForMyaudiUserAction
